# srvmon

./: Pres_VKR.pptx  README.md  config.toml  help.md  pyproject.toml
.srvmon/reports/: srvmon-last-1d-2026-05-11_12-47-33.json  srvmon-last-1d-2026-05-11_12-47-53.json  srvmon-last-1d-2026-05-11_12-52-51.json  srvmon-last-1d-2026-05-11_12-53-37.json  srvmon-last-1d-2026-05-11_12-56-10.json  srvmon-last-1d-2026-05-11_13-03-42.json
src/srvmon/: __init__.py  alerts.py  analytics.py  app.py  config.py  daemon.py  doctor.py  exporter.py  formatting.py  health.py  models.py  periods.py  platforms.py  reports.py  status.py  storage.py  styles.tcss  web.py  widgets.py
src/srvmon/collectors/: __init__.py  cpu.py  disk.py  memory.py  network.py  processes.py  snapshot.py  system.py
tests/: smoke_test.py
