[project]
name = "srvmon"
version = "0.1.0"
description = "Textual TUI for server metrics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "psutil>=5.9",
    "tomli>=2.0; python_version<'3.11'",
    "textual>=0.79",
    "uvicorn>=0.27",
]

[project.scripts]
srvmon = "srvmon.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/srvmon"]
